# NPCsNameDistributor-DynamicReveal

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  NNDDynamicReveal.ini  NND_API.h  README.md  plugin.cpp  vcpkg-configuration.json
NND-DynamicReveal/: CMakeLists.txt  KeyCodes.h  README.md  plugin.cpp
NND-DynamicReveal/SkyrimNet/prompts/submodules/character_bio/: 0005_nnd_name.prompt
NPCsNamesDistributor/: CMakeLists.txt  CMakePresets.json  vcpkg.json
NPCsNamesDistributor/.github/workflows/: main.yml  maintenance.yml
NPCsNamesDistributor/cmake/ports/skse-mcp/: portfile.cmake  vcpkg.json
NPCsNamesDistributor/include/: NND_API.h
NPCsNamesDistributor/src/: Distributor.cpp  Distributor.h  Hooks.cpp  Hotkeys.cpp  LookupNameDefinitions.cpp  MCPMenu.cpp  MCPMenu.h  ModAPI.cpp  ModAPI.h  NameDefinition.cpp  NameDefinitionDecoder.cpp  NameRegenerator.h  Options.cpp  Options.h  PCH.h  Persistency.cpp  main.cpp
SkyrimNet/prompts/submodules/character_bio/: 0005_nnd_name.prompt
